[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory_gym"
version = "1.0.0"
description = "Global Strategic Resource Continuity Environment for Meta OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "StrategyAlpha Team" }
]
dependencies = [
    "pydantic",
    "openai",
    "streamlit",
    "pandas",
    "plotly",
    "numpy",
    "fastapi",
    "uvicorn",
    "openenv-core",
    "python-dotenv",
    "uv"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["inventory_gym*", "server*"]

[project.scripts]
server = "server.app:main"
